@@ -1,4 +1,4 @@
-/**
+/*
  * Copyright 2022 Markus Bordihn
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
@@ -19,33 +19,26 @@
 
 package de.markusbordihn.adaptiveperformancetweaksspawn.config;
 
+import de.markusbordihn.adaptiveperformancetweakscore.CoreConstants;
+import de.markusbordihn.adaptiveperformancetweaksspawn.Constants;
 import java.nio.file.Files;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-
-import org.apache.commons.lang3.tuple.Pair;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-
 import net.minecraftforge.common.ForgeConfigSpec;
 import net.minecraftforge.fml.ModLoadingContext;
 import net.minecraftforge.fml.common.Mod.EventBusSubscriber;
 import net.minecraftforge.fml.config.ModConfig;
 import net.minecraftforge.fml.loading.FMLPaths;
-
-import de.markusbordihn.adaptiveperformancetweakscore.CoreConstants;
-import de.markusbordihn.adaptiveperformancetweaksspawn.Constants;
+import org.apache.commons.lang3.tuple.Pair;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 @EventBusSubscriber(bus = EventBusSubscriber.Bus.MOD)
 public final class CommonConfig {
 
-  protected static final Logger log = LogManager.getLogger(Constants.LOG_NAME);
-
-  private CommonConfig() {}
-
   public static final ForgeConfigSpec commonSpec;
   public static final Config COMMON;
+  protected static final Logger log = LogManager.getLogger(Constants.LOG_NAME);
 
   static {
     com.electronwill.nightconfig.core.Config.setInsertionOrderPreserved(true);
@@ -59,9 +52,12 @@ public final class CommonConfig {
     } catch (Exception exception) {
       log.error("There was an error, creating the directory:", exception);
     }
-    ModLoadingContext.get().registerConfig(ModConfig.Type.COMMON, commonSpec,
-        CoreConstants.CONFIG_ID_PREFIX + "spawn.toml");
+    ModLoadingContext.get()
+        .registerConfig(
+            ModConfig.Type.COMMON, commonSpec, CoreConstants.CONFIG_ID_PREFIX + "spawn.toml");
   }
+
+  private CommonConfig() {}
 
   public static class Config {
 
@@ -83,48 +79,68 @@ public final class CommonConfig {
       builder.comment(Constants.MOD_NAME);
 
       builder.push("General");
-      spawnAllowList = builder.comment(
-          "General allow list for spawn entities (e.g. minecraft:squid) which should be ignored for optimization.")
-          .define("allowList", new ArrayList<String>(Arrays.asList("")));
-      spawnDenyList = builder.comment(
-          "General deny list for spawn entities (e.g. minecraft:bat) to no longer spawn in all worlds.")
-          .define("denyList", new ArrayList<String>(Arrays.asList("")));
-      spawnIgnoreDimensionList = builder.comment("General list of ignored dimensions.").define(
-          "spawnIgnoreDimensionList", new ArrayList<String>(Arrays.asList("minecraft:the_end")));
+      spawnAllowList =
+          builder
+              .comment(
+                  "General allow list for spawn entities (e.g. minecraft:squid) which should be ignored for optimization.")
+              .define("allowList", new ArrayList<>(List.of("")));
+      spawnDenyList =
+          builder
+              .comment(
+                  "General deny list for spawn entities (e.g. minecraft:bat) to no longer spawn in all worlds.")
+              .define("denyList", new ArrayList<>(List.of("")));
+      spawnIgnoreDimensionList =
+          builder
+              .comment("General list of ignored dimensions.")
+              .define("spawnIgnoreDimensionList", new ArrayList<>(List.of("minecraft:the_end")));
       spawnAggressiveMode =
-          builder.comment("Enable/Disable more aggressive and strict spawn limitations.")
+          builder
+              .comment("Enable/Disable more aggressive and strict spawn limitations.")
               .define("spawnAggressiveMode", false);
       builder.pop();
 
       builder.push("Chunk Optimization");
-      friendlyChunkSpawnRate = builder.comment(
-          "Allows to spawn at least one mob (regardless of the type) per selected chunk to avoid side effects."
-              + "A value of 9 means every 9 chunk request will be allowed. Use 0 to disable this optimization.")
-          .defineInRange("friendlyChunkSpawnRate", 9, 0, 256);
+      friendlyChunkSpawnRate =
+          builder
+              .comment(
+                  "Allows to spawn at least one mob (regardless of the type) per selected chunk to avoid side effects."
+                      + "A value of 9 means every 9 chunk request will be allowed. Use 0 to disable this optimization.")
+              .defineInRange("friendlyChunkSpawnRate", 9, 0, 256);
       builder.pop();
 
       builder.push("View Area");
-      viewAreaEnabled = builder.comment("Enable/Disable player based view area optimization.")
-          .define("viewAreaEnabled", true);
+      viewAreaEnabled =
+          builder
+              .comment("Enable/Disable player based view area optimization.")
+              .define("viewAreaEnabled", true);
       builder.pop();
 
       builder.push("Global Spawn Limitations");
-      spawnLimitationEnabled = builder.comment("Enable/Disable general spawn limitations.")
-          .define("spawnLimitationEnabled", true);
-      spawnLimitationLimiter = builder.comment(
-          "Blocks every x spawn to avoid an over population with the limited spawn area. Use 0 to disable this optimization.")
-          .defineInRange("spawnLimitationLimiter", 16, 0, 100);
-      spawnLimitationMaxMobsPerPlayer = builder.comment(
-          "Defines the max. number of entities of a specific type, which could spawn within the player view area. Use 0 to disable this optimization.")
-          .defineInRange("spawnLimitationMaxMobsPerPlayer", 32, 0, 256);
-      spawnLimitationMaxMobsPerWorld = builder.comment(
-          "Defines the max. number of entities of a specific type, which could spawn within a single world. Use 0 to disable this optimization.")
-          .defineInRange("spawnLimitationMaxMobsPerWorld", 128, 0, 1024);
-      spawnLimitationMaxMobsPerServer = builder.comment(
-          "Defines the max. number of entities of a specific type, which could spawn within the server. Use 0 to disable this optimization.")
-          .defineInRange("spawnLimitationMaxMobsPerServer", 512, 0, 1024);
+      spawnLimitationEnabled =
+          builder
+              .comment("Enable/Disable general spawn limitations.")
+              .define("spawnLimitationEnabled", true);
+      spawnLimitationLimiter =
+          builder
+              .comment(
+                  "Blocks every x spawn to avoid an over population with the limited spawn area. Use 0 to disable this optimization.")
+              .defineInRange("spawnLimitationLimiter", 16, 0, 100);
+      spawnLimitationMaxMobsPerPlayer =
+          builder
+              .comment(
+                  "Defines the max. number of entities of a specific type, which could spawn within the player view area. Use 0 to disable this optimization.")
+              .defineInRange("spawnLimitationMaxMobsPerPlayer", 32, 0, 256);
+      spawnLimitationMaxMobsPerWorld =
+          builder
+              .comment(
+                  "Defines the max. number of entities of a specific type, which could spawn within a single world. Use 0 to disable this optimization.")
+              .defineInRange("spawnLimitationMaxMobsPerWorld", 128, 0, 1024);
+      spawnLimitationMaxMobsPerServer =
+          builder
+              .comment(
+                  "Defines the max. number of entities of a specific type, which could spawn within the server. Use 0 to disable this optimization.")
+              .defineInRange("spawnLimitationMaxMobsPerServer", 512, 0, 1024);
       builder.pop();
     }
   }
-
 }
